force-app/main/default/objects/Points_Provider__c/Points_Provider__c.object-meta.xml
<CustomObject>
    <description>Object to Model Third Party Ponts Provider. For example Alitalia Earn Miles</description>
    <label>Points Provider</label>
    <nameField>
        <label>Points Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>