force-app/main/default/objects/Points_Provider__c/fields/Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Code__c</fullName>
    <description>Custom Code to uniquely identifies the a Points Provider</description>
    <label>Provider Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>