force-app/main/default/objects/Points_Provider__c/fields/Provider_Descrription__c.field-meta.xml
<CustomField>
    <fullName>Provider_Descrription__c</fullName>
    <description>Brief narrative of Provider</description>
    <label>Provider Descrription</label>
    <length>120</length>
    <type>Text</type>
</CustomField>