force-app/main/default/objects/Points_Provider__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
                <default>true</default>
                <label>Airline</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>